--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -181,7 +181,7 @@ body {
     height: 3.75rem;
   }
 }
-.filters-container-filter select {
+.filters-container-filter .filter-select {
   cursor: pointer;
   /* appearance: none; */
   color: var(--font-main-color);
@@ -195,29 +195,35 @@ body {
   border-radius: 0.375rem;
 }
 @media (min-width: 64em) {
-  .filters-container-filter select {
+  .filters-container-filter .filter-select {
     width: 100%;
   }
 }
-.filters-container-filter select:focus {
+.filters-container-filter .filter-select::-moz-selection {
+  border: none;
+}
+.filters-container-filter .filter-select::selection {
+  border: none;
+}
+.filters-container-filter .filter-select:focus {
   outline: none;
   border: none;
 }
-.filters-container-filter select::-ms-expand {
+.filters-container-filter .filter-select::-ms-expand {
   display: none;
 }
-.filters-container-filter select option {
+.filters-container-filter .filter-select option {
   cursor: pointer;
   width: 70%;
   border: none;
   border-radius: 6px;
 }
 @media (min-width: 64em) {
-  .filters-container-filter select option {
+  .filters-container-filter .filter-select option {
     width: 100%;
   }
 }
-.filters-container-filter select option:focus {
+.filters-container-filter .filter-select option:focus {
   outline: none;
 }
 
