Se agrego al proyecto redux toolkit, reemplazando contexto global de react.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -34,18 +34,18 @@ body {
 }
 
 :root {
-  --background-main-color: hsl(0deg, 0%, 98%);
+  --background-main-color: hsl(0, 0%, 98%);
   --background-item-color: white;
   --background-navbar-color: white;
   --font-main-color: black;
-  --search-logo: hsl(0deg, 0%, 52%);
+  --search-logo: hsl(0, 0%, 52%);
 }
 
 .dark-theme {
-  --background-main-color: hsl(207deg, 26%, 17%);
-  --background-item-color: hsl(209deg, 23%, 22%);
-  --background-navbar-color: hsl(209deg, 23%, 22%);
-  --font-secondary-color: hsl(0deg, 0%, 90%);
+  --background-main-color: hsl(209, 26%, 17%);
+  --background-item-color: hsl(209, 23%, 22%);
+  --background-navbar-color: hsl(209, 23%, 22%);
+  --font-secondary-color: hsl(0, 0%, 90%);
   --font-main-color: white;
   --search-logo: white;
 }
@@ -96,10 +96,7 @@ body {
   font-weight: bold;
   font-size: 1.125rem;
   margin-left: 0.9375rem;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   cursor: pointer;
 }
 .nav-container .mode p:hover {
@@ -199,9 +196,6 @@ body {
     width: 100%;
   }
 }
-.filters-container-filter .filter-select::-moz-selection {
-  border: none;
-}
 .filters-container-filter .filter-select::selection {
   border: none;
 }
@@ -229,18 +223,18 @@ body {
 
 .country-container {
   margin: 0 auto;
-  height: auto;
+  margin-top: 100px;
   width: 80%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   gap: 3.4375rem;
-  padding-bottom: 2.5rem;
+  height: 70vh;
 }
 @media (min-width: 64em) {
   .country-container {
     margin: 0 auto;
-    padding-bottom: 325px;
+    margin-top: 100px;
     width: 90%;
   }
 }
@@ -281,10 +275,8 @@ body {
   max-height: 20rem;
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center center;
-     object-position: center center;
+  object-fit: cover;
+  object-position: center center;
 }
 .country-container-country img:hover {
   opacity: 70%;
@@ -396,8 +388,7 @@ body {
     max-width: 35rem;
     min-height: 23.75rem;
     max-height: 28.125rem;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 .country-detail-container .info-container .detail-title {
@@ -435,27 +426,27 @@ body {
 }
 @media (min-width: 64em) {
   .country-detail-container .info-container .first-column p:not(:last-child),
-.country-detail-container .info-container .second-column p:not(:last-child) {
+  .country-detail-container .info-container .second-column p:not(:last-child) {
     margin-bottom: 1rem;
   }
 }
 @media (min-width: 40em) {
   .country-detail-container .info-container .first-column p,
-.country-detail-container .info-container .first-column span,
-.country-detail-container .info-container .second-column p,
-.country-detail-container .info-container .second-column span {
+  .country-detail-container .info-container .first-column span,
+  .country-detail-container .info-container .second-column p,
+  .country-detail-container .info-container .second-column span {
     font-size: 1.4375rem;
   }
 }
 @media (min-width: 64em) {
   .country-detail-container .info-container .first-column,
-.country-detail-container .info-container .second-column {
+  .country-detail-container .info-container .second-column {
     margin-bottom: 0px;
   }
   .country-detail-container .info-container .first-column p,
-.country-detail-container .info-container .first-column span,
-.country-detail-container .info-container .second-column p,
-.country-detail-container .info-container .second-column span {
+  .country-detail-container .info-container .first-column span,
+  .country-detail-container .info-container .second-column p,
+  .country-detail-container .info-container .second-column span {
     font-size: 1rem;
   }
 }
@@ -557,3 +548,5 @@ body {
 .country-detail .border-link {
   text-decoration: none;
 }
+
+/*# sourceMappingURL=styles.css.map */
