--- a/src/Sass/_global.scss
+++ b/src/Sass/_global.scss
@@ -11,6 +11,7 @@ body {
   min-width: 23.4375rem;
   background-color: var(--background-main-color);
   font-family: "Roboto", sans-serif;
+  // height: 90vh;
 }
 .loading {
   background-color: var(--background-main-color);
