feat: :bug: -se corrige error que ocacionaba que el alto de la página no se adaptará bien, lo que hacia que el color del container se viera mal.

--- a/src/Sass/_home.scss
+++ b/src/Sass/_home.scss
@@ -1,4 +1,6 @@
 .home-container {
   background-color: var(--background-main-color);
   color: var(--font-main-color);
+  // height: auto;
+  height: auto;
 }
