--- a/src/Sass/_country.scss
+++ b/src/Sass/_country.scss
@@ -1,19 +1,16 @@
 .country-container {
   margin: 0 auto;
-  margin-top: 100px;
-  // height: auto;
+
   width: 80%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   gap: 3.4375rem;
-  // padding-bottom: 2.5rem;
-  height: 70vh;
 
   @include breakpoint-up(large) {
     margin: 0 auto;
-    margin-top: 100px;
-    // padding-bottom: 325px;
+    // margin-top: 100px;
+    padding-bottom: 150px;
     width: 90%;
   }
 
