--- a/src/Sass/_global.scss
+++ b/src/Sass/_global.scss
@@ -9,9 +9,10 @@
 
 body {
   min-width: 23.4375rem;
+
   background-color: var(--background-main-color);
+
   font-family: "Roboto", sans-serif;
-  // height: 90vh;
 }
 .loading {
   background-color: var(--background-main-color);
@@ -26,8 +27,10 @@ body {
 }
 
 .error-search-container {
-  height: 90vh;
+  height: 92vh;
   text-align: center;
+  background-color: var(--background-main-color);
+  color: var(--font-main-color);
 
   .error-icon {
     margin: 6.25rem 0;
