--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+:root {
+  --background-main-color: hsl(0, 0%, 98%);
+  --background-item-color: white;
+  --background-navbar-color: white;
+  --font-main-color: black;
+  --search-logo: hsl(0, 0%, 52%);
+}
+
+.dark-theme {
+  --background-main-color: hsl(209, 26%, 17%);
+  --background-item-color: hsl(209, 23%, 22%);
+  --background-navbar-color: hsl(209, 23%, 22%);
+  --font-secondary-color: hsl(0, 0%, 90%);
+  --font-main-color: white;
+  --search-logo: white;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -25,29 +42,14 @@ body {
 }
 
 .error-search-container {
-  height: 90vh;
+  height: 92vh;
   text-align: center;
+  background-color: var(--background-main-color);
+  color: var(--font-main-color);
 }
 .error-search-container .error-icon {
   margin: 6.25rem 0;
   font-size: 6.25rem;
-}
-
-:root {
-  --background-main-color: hsl(0, 0%, 98%);
-  --background-item-color: white;
-  --background-navbar-color: white;
-  --font-main-color: black;
-  --search-logo: hsl(0, 0%, 52%);
-}
-
-.dark-theme {
-  --background-main-color: hsl(209, 26%, 17%);
-  --background-item-color: hsl(209, 23%, 22%);
-  --background-navbar-color: hsl(209, 23%, 22%);
-  --font-secondary-color: hsl(0, 0%, 90%);
-  --font-main-color: white;
-  --search-logo: white;
 }
 
 .nav-container {
@@ -106,6 +108,7 @@ body {
 .home-container {
   background-color: var(--background-main-color);
   color: var(--font-main-color);
+  height: auto;
 }
 
 .filters-container {
@@ -223,18 +226,16 @@ body {
 
 .country-container {
   margin: 0 auto;
-  margin-top: 100px;
   width: 80%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   gap: 3.4375rem;
-  height: 70vh;
 }
 @media (min-width: 64em) {
   .country-container {
     margin: 0 auto;
-    margin-top: 100px;
+    padding-bottom: 150px;
     width: 90%;
   }
 }
@@ -324,7 +325,6 @@ body {
 }
 @media (min-width: 64em) {
   .country-detail-container {
-    height: 90vh;
     padding-bottom: 20px;
   }
 }
