Se quita gh pages, se agrega página not found, se corrige errores de reedirección

--- a/src/Sass/_countryDetail.scss
+++ b/src/Sass/_countryDetail.scss
@@ -1,5 +1,6 @@
 .country-detail {
   &-container {
+    height: 90vh;
     background: var(--background-main-color);
     width: 100%;
     color: var(--font-main-color);
