--- a/src/Sass/_global.scss
+++ b/src/Sass/_global.scss
@@ -27,6 +27,11 @@ body {
 }
 
 .error-search-container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 92vh;
   text-align: center;
   background-color: var(--background-main-color);
@@ -35,5 +40,56 @@ body {
   .error-icon {
     margin: 6.25rem 0;
     font-size: 6.25rem;
+  }
+}
+
+.btn-link {
+  text-decoration: none;
+}
+
+.btn-back {
+  cursor: pointer;
+  border: none;
+  border-radius: 0.375rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+  background-color: var(--background-item-color);
+  color: var(--font-main-color);
+  letter-spacing: 0.1875rem;
+  font-weight: 300;
+  margin-top: 2.5rem;
+  width: 9.375rem;
+  height: 2.8125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @include breakpoint-up(medium) {
+    font-size: 1.25rem;
+    width: 12.5rem;
+    height: 3.75rem;
+  }
+  .arrow-icon {
+    margin-right: 20px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+}
+
+.not-found-container {
+  background-color: var(--background-main-color);
+  width: 100%;
+  height: 92vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--font-main-color);
+  h2 {
+    font-size: 50px;
+  }
+  .not-found-icon {
+    font-size: 100px;
   }
 }
